# shell

./: Cargo.toml  README.md
src/: context.rs  deserializer.rs  error.rs  lib.rs  main.rs  signature.rs
src/cli/: colors.rs  mod.rs
src/commands/: cd.rs  count.rs  cp.rs  exit.rs  help.rs  ls.rs  mkdir.rs  mod.rs  pwd.rs
src/commands/classified/: external.rs  internal.rs  mod.rs  pipeline.rs
src/evaluate/: call_info.rs  mod.rs  value.rs
src/parser/: hir.rs  mod.rs  parsers.rs  pipeline.rs  signature.rs  span.rs  syntax_shape.rs  token.rs  tracable.rs
src/parser/command/: mod.rs
src/parser/command/classified/: external.rs  internal.rs  mod.rs
src/shell/: filesystem_shell.rs  mod.rs
