[package]
name = "shell"
version = "0.1.0"
authors = ["lsongzhi <lsongzhi@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.1"
rustyline = "6.0.0"
nom-tracable = "0.4.1"
nom_locate = "1.0.0"
derive-new = "0.5.8"
strip-ansi-escapes = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
indexmap = { version = "1.3", features = ["serde-1"] }