[package]
name = "shell"
version = "0.1.0"
authors = ["lsongzhi <lsongzhi@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.1"
rustyline = "6.0.0"
nom-tracable = "0.4.1"
nom_locate = "1.0.0"
derive-new = "0.5.8"
strip-ansi-escapes = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
indexmap = { version = "1.3", features = ["serde-1"] }
enumflags2 = "0.6.2"
num-bigint = { version = "0.2.3", features = ["serde"] }
bigdecimal = { version = "0.1.0", features = ["serde"] }
parking_lot = "0.10.0"
which = "3.1.0"
shellexpand = "1.1.1"
dirs = "2.0.2"
ansi_term = "0.12.1"